--- a/Login.css
+++ b/Login.css
@@ -11,9 +11,11 @@
 
 * { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; }
 
-html { width: 100%; height:100%; overflow:hidden; }
+html {
+    width: 100%; height:100%; overflow:hidden; }
 
 body { 
+    color: white;
 	width: 100%;
 	height:100%;
 	font-family: 'Open Sans', sans-serif;
